# compare_json

./: CMakeLists.txt  README.md  comparejson.ui  main.cpp
json_path/: final_points_2.json  final_points_3.json  final_points_4.json
